# texture2

./: .gitignore  CMakeLists.txt  Makefile  README.md  box.cpp  box.h  light.psd  main.cpp  trackball.cpp  trackball.h
texture2.xcode/: project.pbxproj  tokoi.mode1  tokoi.pbxuser
texture2.xcodeproj/: project.pbxproj
